--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
   <head>
-      <title>Dibujando a Umaru-Chan</title>
+      <title>Dibujando a Vulpix de Pokémon</title>
     	<meta name="viewport" content="width=device-width, initial-scale=1">
     	<link href="style.css" rel="stylesheet" type="text/css">
   </head>
